samples/_failures_safe/1761689174_508412_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_886dfb22.c: In function ‘main’:
./samples/SAFE/__tmp_886dfb22.c:162:5: error: expected expression at end of input
  162 |     uint8_t test_data3[] = {
      |     ^~~~~~~
./samples/SAFE/__tmp_886dfb22.c:162:5: error: expected declaration or statement at end of input
